--- a/Gemma/Views/AspNetUsers/Index.cshtml
+++ b/Gemma/Views/AspNetUsers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Gemma.Models.AspNetUsers>
+﻿@model IEnumerable<Gemma.ViewModel.MemberViewModel>
 
 @{
     ViewBag.Title = "Index";
