--- a/Gemma/Views/Stocks/Edit.cshtml
+++ b/Gemma/Views/Stocks/Edit.cshtml
@@ -20,23 +20,26 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                     <div class="form-group">
-                        @Html.DisplayNameFor(model => model.ProductName)
+                        @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DisplayFor(model => model.ProductName)
+                            @Html.EditorFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control",disabled = "disabled" } })
+                            @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-                        @Html.DisplayNameFor(model => model.ColorName)
+                        @Html.LabelFor(model => model.ColorName, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DisplayFor(model => model.ColorName)
+                            @Html.EditorFor(model => model.ColorName, new { htmlAttributes = new { @class = "form-control",disabled = "disabled" } })
+                            @Html.ValidationMessageFor(model => model.ColorName, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-                        @Html.DisplayNameFor(model => model.SizeID)
+                        @Html.LabelFor(model => model.SizeID, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DisplayFor(model => model.SizeID)
+                            @Html.EditorFor(model => model.SizeID, new { htmlAttributes = new { @class = "form-control",disabled = "disabled" } })
+                            @Html.ValidationMessageFor(model => model.SizeID, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
