--- a/Gemma/Views/AspNetUsers/Details.cshtml
+++ b/Gemma/Views/AspNetUsers/Details.cshtml
@@ -17,6 +17,14 @@
                 <hr>
                 <dl class="dl-horizontal">
                     <dt>
+                        @Html.DisplayNameFor(model => model.Id)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Id)
+                    </dd>
+
+                    <dt>
                         @Html.DisplayNameFor(model => model.UserName)
                     </dt>
 
@@ -38,22 +46,6 @@
 
                     <dd>
                         @Html.DisplayFor(model => model.PhoneNumber)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.LockoutEndDateUtc)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.AccessFailedCount)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.AccessFailedCount)
                     </dd>
 
                 </dl>
