--- a/Gemma/Views/BackStock/Create.cshtml
+++ b/Gemma/Views/BackStock/Create.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewBag.Title = "Create";
 }
-
 <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
     @Html.Partial("_BackStagePartialTop")
     <div class="app-main">
@@ -11,8 +10,8 @@
         <div class="app-main__outer">
             <div class="app-main__inner">
 
-                @using (Html.BeginForm())
-                {
+                <form action="@Url.Action("Create")" method="post" enctype="multipart/form-data">
+
                     @Html.AntiForgeryToken()
 
                     <div class="form-horizontal">
@@ -23,7 +22,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.DropDownListFor(model => model.ProductID,(SelectList)ViewBag.ProductID, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.DropDownListFor(model => model.ProductID, (SelectList)ViewBag.ProductID, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -51,14 +50,18 @@
                                 @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
                             </div>
                         </div>
-
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Create" class="btn btn-default" />
+                                <input id="file" name="files" type="file" accept=".jpg" multiple="multiple"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="新增" class="btn btn-default"/>
                             </div>
                         </div>
                     </div>
-                }
+                </form>
 
                 <div>
                     @Html.ActionLink("Back to List", "Index")
