--- a/Gemma/Views/Shared/_BackStagePartialMain.cshtml
+++ b/Gemma/Views/Shared/_BackStagePartialMain.cshtml
@@ -33,15 +33,16 @@
                 </span>
             </button>
         </span>
-    </div>    <div class="scrollbar-sidebar">
+    </div>    
+    <div class="scrollbar-sidebar">
         <div class="app-sidebar__inner">
             <ul class="vertical-nav-menu">
                 <li class="app-sidebar__heading">後台管理</li>
                 <li>
-                    @Html.ActionLink("會員管理","Index","AspNetUsers","",new { @class = "mm-active"})
+                    @Html.ActionLink("會員管理","Index","AspNetUsers",null,new { @class = "mm-active"})
                 </li>
                 <li>
-                    @Html.ActionLink("庫存管理", "Index", "Stocks", "", new { @class = "mm-active" })
+                    @Html.ActionLink("庫存管理", "Index", "BackStock", null, new { @class = "mm-active" })
                 </li>
             </ul>
         </div>
