--- a/Gemma/Views/Shared/_BackStagePartialTop.cshtml
+++ b/Gemma/Views/Shared/_BackStagePartialTop.cshtml
@@ -1,11 +1,17 @@
-﻿
-<link href="~/Assets/css/main.css" rel="stylesheet">
+﻿<link href="~/Assets/css/main.css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
-
+<script type="text/javascript" src="~/Assets/js/main.js"></script>
 <div class="app-header header-shadow">
     <div class="app-header__logo">
     </div>
     <div class="app-header__mobile-menu">
+        <div>
+            <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
+        </div>
     </div>
     <div class="app-header__menu">
     </div>
