--- a/Gemma/Views/Shared/_Layout.cshtml
+++ b/Gemma/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/chartjs")
     @RenderSection("scripts", required: false)
 
     @RenderSection("endCSS", required: false)
