--- a/Gemma/Views/Shared/_Footer.cshtml
+++ b/Gemma/Views/Shared/_Footer.cshtml
@@ -2,18 +2,37 @@
 @{
     ViewBag.Title = "_Footer";
 }
-@section topCSS{
-    <link href="~/Assets/CSS/FixedMenu.css" rel="stylesheet" />
-}
-<div class="container instagram-column col-10">
+
+<div class="container instagram-column ">
     <section class="home-section-by-instagram">
         <header class="section-header">
             <h1 class="section-title"><a href="https://www.instagram.com/daniella_and_gemma/">INSTAGRAM</a></h1>
             <p class="section-more"><a href="https://www.instagram.com/daniella_and_gemma/">all instagram</a></p>
         </header>
-        <div class="section-body">
-            <div class="instagram-list hover-group">
-
+        <br />
+        <br />
+        <div class="instagram-body">
+            <div class="instagram-list">
+                <ul>
+                    <li>
+                        <a href="#"><img src="~/Assets/images/HomePage/IGImg01.jpg" /></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="~/Assets/images/HomePage/IGImg02.jpg" /></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="~/Assets/images/HomePage/IGImg03.jpg" /></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="~/Assets/images/HomePage/IGImg04.jpg" /></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="~/Assets/images/HomePage/IGImg05.jpg" /></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="~/Assets/images/HomePage/IGImg06.jpg" /></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
