--- a/Gemma/Assets/css/FixedMenu.css
+++ b/Gemma/Assets/css/FixedMenu.css
@@ -1,6 +1,7 @@
-﻿body {
+﻿
 
-    background-color: #FFF4E9;
+body {
+    background-color: #FFF5EA;
 }
 li {
     list-style-type: none;
@@ -8,8 +9,8 @@ li {
 a {
     color: black;
     text-decoration: none;
-    font-size:20px;
-
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
 }
 
 /*消除下拉式選單的箭頭*/
@@ -23,12 +24,12 @@ a {
 }
 .header {
     position: fixed;
-    background-color: #FFF4E9;
+    background-color: #FFF5EA;
     z-index: 9999;
 }
     .header a:hover {
-        background-color: #FFF4E9;
-        color:black;
+        background-color: #FFF5EA;
+        color: black;
     }
 
 .header-nav {
@@ -38,6 +39,10 @@ a {
 }
 .header-tool{
     height:67px;
+}
+
+.PaddingTopCSS {
+    padding-top: 200px;
 }
 /*CSS for _Social_Icons.cshtml*/
 .social-icons {
@@ -54,17 +59,39 @@ a {
     }
 /*CSS for _Footer.cshtml*/
 /*For IG*/
+.instagram-column {
+    padding-top:100px;
+    width: 1600px;
+    height: 450px;
+    overflow: hidden;
+}
 .section-header {
-    float: left;
-    left: 75% ;
-    position:relative;
+    text-align: right;
 }
 .section-title a {
     font-size: 60px;
 }
+.instagram-list {
+    width: 1300px;
+    height: 360px;
+    overflow: hidden;
+}
+    .instagram-list ul {
+        margin: 0;
+        padding: 0px;
+    }
+.instagram-list ul li {
+    list-style:none;
+    display: inline;
+   
+}
+.instagram-list ul li a img {
+    width: 180px;
+    height: 180px;
+}
+
 
 /*For News Letter*/
-
 .footer-form__title {
     text-align: center;
     font-size: 60px;
@@ -112,15 +139,17 @@ a {
 
     text-align: center;
 }
-    .footer-nav li {
+    .footer-nav a {
         float: left;
-        left: 20%;
+        left: 35%;
         position: relative;
         padding: 40px;
         
     }
+
     .footer-nav a {
         color: white;
+        
     }
     .footer-nav a:hover {
         background-color: lightsteelblue;
