--- a/Gemma/Assets/css/FixedMenu.css
+++ b/Gemma/Assets/css/FixedMenu.css
@@ -1,6 +1,5 @@
 ﻿body {
-
-    background-color: #FFF4E9;
+    background-color: #F5F5F5;
 }
 li {
     list-style-type: none;
@@ -23,12 +22,12 @@ a {
 }
 .header {
     position: fixed;
-    background-color: #FFF4E9;
+    background-color: #F5F5F5;
     z-index: 9999;
 }
     .header a:hover {
-        background-color: #FFF4E9;
-        color:black;
+        background-color: #F5F5F5;
+        color: black;
     }
 
 .header-nav {
