Display Logout text when Login (Navbar User_Mark)、Modify Required text(change to English)、Forgot password (Add CSS style)

--- a/Gemma/Views/Account/Login.cshtml
+++ b/Gemma/Views/Account/Login.cshtml
@@ -95,6 +95,9 @@
             margin-bottom: 40px;
         }
 
+        
+
+
         /*字體大小*/
         .FontSize{
             font-size:13px;
@@ -118,6 +121,17 @@
         #ForgetPwd {
             float: right;
         }
+
+        /*連結底線消失*/
+        #ForgetPwd > a{
+            text-decoration: none;
+        }
+        
+        #ForgetPwd > a:hover{
+           color:black;
+        }
+
+
 
         /*Btn登入*/
         #Btn_Login {
