--- a/Gemma/Views/Account/Register.cshtml
+++ b/Gemma/Views/Account/Register.cshtml
@@ -50,10 +50,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(m => m.DateOfBirth, new { @class = "control-label" })
+                    @Html.LabelFor(m => m.DateOfBirth, new { @class = "control-label FontSize" })
                     <br /><br />
                     <div>
-                        @Html.EditorFor(m => m.DateOfBirth, new { htmlAttributes = new { @class = "form-control  TextBox-Width", id = "DateOfBirth" } })
+                        @Html.EditorFor(m => m.DateOfBirth, new { htmlAttributes = new { @class = "form-control  TextBox"} })
                         @Html.ValidationMessageFor(m => m.DateOfBirth, "", new { @class = "text-danger" })
                     </div>
                 </div>
