--- a/Gemma/Views/BackStageHome/Index.cshtml
+++ b/Gemma/Views/BackStageHome/Index.cshtml
@@ -1,20 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "BackStageIndex";
+    ViewBag.Title = "Index";
 }
-<div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
-    @Html.Partial("_BackStagePartialTop")
-    <div class="app-main">
-        @Html.Partial("_BackStagePartialMain")
-        <div class="app-main__outer">
-            <div class="app-main__inner">
-                <canvas id="backhomepage"></canvas>
-            </div>
-        </div>
-    </div>
-</div>
-@section endJS{
 
+<canvas id="backhomepage"></canvas>
+@section endJS{
     <script>
         var ctx = document.getElementById("backhomepage");
         var chart = new Chart(ctx, {
@@ -54,3 +44,4 @@
         });
     </script>
 }
+
