--- a/Gemma/Views/BackStock/Delete.cshtml
+++ b/Gemma/Views/BackStock/Delete.cshtml
@@ -5,8 +5,6 @@
 }
 
 <div>
-    <h4>StockViewModel</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.ProductName)
@@ -46,8 +44,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="刪除" class="btn btn-default" /> |
+            @Html.ActionLink("返回庫存管理頁面", "Index")
         </div>
     }
 </div>
