--- a/Gemma/Views/BackStock/Edit.cshtml
+++ b/Gemma/Views/BackStock/Edit.cshtml
@@ -9,8 +9,6 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>StockViewModel</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
@@ -47,12 +45,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="儲存" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("返回庫存管理頁面", "Index")
 </div>
