--- a/Gemma/Views/Shared/_BackStagePartialMain.cshtml
+++ b/Gemma/Views/Shared/_BackStagePartialMain.cshtml
@@ -44,6 +44,9 @@
                 <li>
                     @Html.ActionLink("庫存管理", "Index", "BackStock", null, new { @class = "mm-active" })
                 </li>
+                <li>
+                    @Html.ActionLink("產品管理", "Index", "Products", null, new { @class = "mm-active" })
+                </li>
             </ul>
         </div>
     </div>
