--- a/Gemma/Views/Account/Login.cshtml
+++ b/Gemma/Views/Account/Login.cshtml
@@ -35,7 +35,7 @@
                         @Html.LabelFor(m => m.Password, new { @class = "control-label FontSize" })
                         @* 只要您的密碼重設功能能夠進行帳戶確認，就啟用此項 *@
                         @* 忘記密碼? *@
-                        <p id="ForgetPwd">@Html.ActionLink("パスワードを忘れました", "ForgotPassword", null,  new { @class = "FontSize"})</p>
+                        <p id="ForgetPwd">@Html.ActionLink("パスワードを忘れました", "ForgotPassword", null, new { @class = "FontSize" })</p>
                         <br /><br />
                         <div>
                             @Html.PasswordFor(m => m.Password, new { @class = "form-control TextBox" })
@@ -46,7 +46,7 @@
 
                     <div class="form-group">
                         @Html.CheckBoxFor(m => m.RememberMe)
-                        @Html.LabelFor(m => m.RememberMe, new { @class = "FontSize"})
+                        @Html.LabelFor(m => m.RememberMe, new { @class = "FontSize" })
 
                         <input type="submit" value="LOGIN" id="Btn_Login" />
                     </div>
@@ -55,8 +55,8 @@
 
             @* 外部登入 *@
             @*<section id="socialLoginForm">
-                @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-            </section>*@
+                    @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+                </section>*@
         </div>
 
 
@@ -95,41 +95,41 @@
             margin-bottom: 40px;
         }
 
-        
+
 
 
         /*字體大小*/
-        .FontSize{
-            font-size:13px;
+        .FontSize {
+            font-size: 13px;
         }
 
         /*輸入框 => 長度、輸入框高度、輸入字體大小、背景顏色、邊框*/
         .TextBox {
             max-width: 100%;
-            height:30px;
+            height: 30px;
             font-size: 13px;
             background-color: #FFF5EA;
-            border:black 1px solid;
+            border: black 1px solid;
         }
 
-        /*輸入時，背景的顏色*/
-        .TextBox:focus {
-            background-color: #FFF5EA;
-        }
+            /*輸入時，背景的顏色*/
+            .TextBox:focus {
+                background-color: #FFF5EA;
+            }
 
         /*忘記密碼*/
         #ForgetPwd {
             float: right;
         }
 
-        /*連結底線消失*/
-        #ForgetPwd > a{
-            text-decoration: none;
-        }
-        
-        #ForgetPwd > a:hover{
-           color:black;
-        }
+            /*連結底線消失*/
+            #ForgetPwd > a {
+                text-decoration: none;
+            }
+
+                #ForgetPwd > a:hover {
+                    color: black;
+                }
 
 
 
@@ -155,21 +155,24 @@
 
         /*右邊說明*/
 
-        #Right_Description{
-            font-size:15px;
+        #Right_Description {
+            font-size: 15px;
         }
 
-        #Right_Description > h3 {
-            margin-bottom: 30px;
-        }
+            #Right_Description > h3 {
+                margin-bottom: 30px;
+            }
 
-        #Right_Description > ul > li {
-            padding-bottom: 10px;
-        }
+            #Right_Description > ul > li {
+                padding-bottom: 10px;
+            }
     </style>
 }
 
 @section endJS{
+    @* 在前端時，就先驗證欄位是否符合 *@
+    @Scripts.Render("~/bundles/jqueryval")
+
     <script src="~/Assets/js/FixedMenuForIG.js"></script>
 
     <script>
