MemberCenter(passwoedRevise unfinish)

--- a/Gemma/Views/MemberCenter/Home.cshtml
+++ b/Gemma/Views/MemberCenter/Home.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "会員登録";
 }
-
+@Html.Partial("IndexPartial")
 <br />
 <div class="container-fluid  content-grid">
     <div class="row-fluid ">
@@ -26,6 +26,7 @@
         </div>
     </div>
 </div>
+@Html.Partial("_Footer")
 
 <link href="~/Assets/CSS/MemberCenter.css" rel="stylesheet" />
 @section topCSS{
