--- a/Gemma/Views/MemberCenter/MemberInfo.cshtml
+++ b/Gemma/Views/MemberCenter/MemberInfo.cshtml
@@ -1,8 +1,11 @@
-﻿@model Gemma.Models.AspNetUser
+﻿@model Gemma.AspNetUser
+@using Microsoft.AspNet.Identity
 
 @{
     ViewBag.Title = "会員情報の編集 - Daniella & GEMMA（ダニエラ＆ジェマ）オンラインストア";
 }
+@Html.Partial("IndexPartial")
+
 <div class="container">
     <div class="row">
         <br />
@@ -130,7 +133,8 @@
 @*<div>
         @Html.ActionLink("Back to List", "Index")
     </div>*@
-
+@Html.Partial("_Footer")
+<link href="~/Assets/CSS/FixedMenu.css" rel="stylesheet" />
 <link href="~/Assets/CSS/MemberCenter.css" rel="stylesheet" />
 
 @section topCSS{
@@ -144,10 +148,13 @@
 @section endJS{
     <script>
         $("#memberInformation").click(function () {
-            location.href = "/MemberCenter/MemberInformation"
+            location.href = "/MemberCenter/MemberInfo/@Html.Raw(User.Identity.GetUserId())"
         });
         $("#orderSearch").click(function () {
-            location.href = "/MemberCenter/OrderSearch"
+            location.href = "/MemberCenter/OrderSearch/@Html.Raw(User.Identity.GetUserId())"
         });
     </script>
 }
+@Scripts.Render("~/bundles/jqueryval")
+
+<script src="~/Assets/js/FixedMenuForIG.js"></script>
