--- a/Gemma/Views/MemberCenter/Home.cshtml
+++ b/Gemma/Views/MemberCenter/Home.cshtml
@@ -27,7 +27,7 @@
     </div>
 </div>
 @Html.Partial("_Footer")
-
+<link href="~/Assets/CSS/FixedMenu.css" rel="stylesheet" />
 <link href="~/Assets/CSS/MemberCenter.css" rel="stylesheet" />
 @section topCSS{
     <style>
@@ -52,3 +52,4 @@
         }
     </style>
 }
+<script src="~/Assets/js/FixedMenuForIG.js"></script>
