--- a/Gemma/Views/Account/ForgotPassword.cshtml
+++ b/Gemma/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Gemma.Models.ForgotPasswordViewModel
+@using Gemma.Helper
 @{
     ViewBag.Title = "忘記密碼?";
 }
@@ -19,13 +20,13 @@
 
                 @Html.ValidationSummary("", new { @class = "text-danger" })
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.Email, new { @class = "control-label FontSize" })
-                <br /><br />
-                <div>
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control TextBox" })
+                <div class="form-group">
+                    @Html.RequiredLabelFor(m => m.Email, new { @class = "control-label FontSize" })
+                    <br /><br />
+                    <div>
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control TextBox" })
+                    </div>
                 </div>
-            </div>
 
                 <div class="form-group">
                     <div align="center">
@@ -37,7 +38,7 @@
 
         @*<div class="col-md-1"></div>*@
 
-        <div class="col-md-5"  id="Right_Description">
+        <div class="col-md-5" id="Right_Description">
             <h3><b>パスワード再発行</b></h3>
             <p>パスワードをお忘れの場合はEメールアドレスを入力して パスワード再設定 ボタンを押してください。</p>
             <p>パスワードの再設定に関するメールが送信されます。</p>
@@ -61,8 +62,8 @@
         }
 
         /*字體大小*/
-        .FontSize{
-            font-size:13px;
+        .FontSize {
+            font-size: 13px;
         }
 
         /*輸入框 => 長度、輸入框高度、輸入字體大小、背景顏色、邊框*/
@@ -92,18 +93,18 @@
 
         /*右邊說明*/
 
-        #Right_Description{
-            margin-left:50px;
-            font-size:15px;
+        #Right_Description {
+            margin-left: 50px;
+            font-size: 15px;
         }
 
-        #Right_Description > h3 {
-            margin-bottom: 30px;
-        }
+            #Right_Description > h3 {
+                margin-bottom: 30px;
+            }
 
-        #Right_Description > ul > li {
-            padding-bottom: 10px;
-        }
+            #Right_Description > ul > li {
+                padding-bottom: 10px;
+            }
     </style>
 }
 
