--- a/Gemma/Views/Account/Register.cshtml
+++ b/Gemma/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Gemma.Models.RegisterViewModel
+@using Gemma.Helper
 @{
     ViewBag.Title = "註冊";
 }
@@ -21,7 +22,7 @@
 
                 // Email
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "control-label FontSize" })
+                    @Html.RequiredLabelFor(m => m.Email, new { @class = "control-label FontSize" })
                     <br /><br />
                     <div>
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control TextBox" })
@@ -31,7 +32,7 @@
 
                 // Password 密碼
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "control-label FontSize" })
+                    @Html.RequiredLabelFor(m => m.Password, new { @class = "control-label FontSize" })
                     <br /><br />
                     <div>
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control TextBox" })
@@ -41,7 +42,7 @@
 
                 // ConfirmPassword 確認密碼
                 <div class="form-group">
-                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label FontSize" })
+                    @Html.RequiredLabelFor(m => m.ConfirmPassword, new { @class = "control-label FontSize" })
                     <br /><br />
                     <div>
                         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control TextBox" })
@@ -50,7 +51,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(m => m.DateOfBirth, new { @class = "control-label FontSize" })
+                    @Html.RequiredLabelFor(m => m.DateOfBirth, new { @class = "control-label FontSize" })
                     <br /><br />
                     <div>
                         @Html.EditorFor(m => m.DateOfBirth, new { htmlAttributes = new { @class = "form-control  TextBox" } })
