--- a/Gemma/Views/MemberCenter/OrderSearch.cshtml
+++ b/Gemma/Views/MemberCenter/OrderSearch.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Gemma.Order>
+﻿@model List<Gemma.ViewModel.OrderViewModel>
 @using Microsoft.AspNet.Identity
 
 @{
@@ -19,18 +19,17 @@
     <table class="table" style="margin-top:20px">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.OrderID)
+                ID
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CustomerID)
+                お客様
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OrderDate)
+                日時
             </th>
-            @*<th>
-                    @Html.DisplayNameFor(model => model.Total)
-                </th>*@
-            <th></th>
+            <th>
+                合計
+            </th>
         </tr>
 
         @foreach (var item in Model)
@@ -40,19 +39,14 @@
                     @Html.DisplayFor(modelItem => item.OrderID)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.CustomerID)
+                    @Html.DisplayFor(modelItem => item.CustomerName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.OrderDate)
                 </td>
-                @*<td>
-                        @Html.DisplayFor(modelItem => item.Total)
-                    </td>*@
-                @*<td>
-                        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-                    </td>*@
+                <td>
+                    @Html.DisplayFor(modelItem => item.TotalPrice)
+                </td>
             </tr>
         }
 
