--- a/Gemma/Views/Shared/_Header.cshtml
+++ b/Gemma/Views/Shared/_Header.cshtml
@@ -7,20 +7,20 @@
     <br />
     <div class="row">
         <div class="logo">
-            <a href="#"><img src="~/Assets/images/Icons/logo.png" /></a>
+            <a href="@Url.Action("DaniellaGemma","Home")"><img src="~/Assets/images/Icons/logo.png" /></a>
 
         </div>
         <div class="header-nav row">
 
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">ONLINE STORE</a>
+                    <a class="nav-link active" href="@Url.Action("OnlineStore","OnlineStore")">ONLINE STORE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">COLLECTION</a>
+                    <a class="nav-link" href="@Url.Action("CollectionPhotos","Collection")">COLLECTION</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">JOURNAL</a>
+                    <a class="nav-link" href="@Url.Action("Index","Journall")">JOURNAL</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">SHOP</a>
