--- a/Gemma/Views/AspNetUsers/Delete.cshtml
+++ b/Gemma/Views/AspNetUsers/Delete.cshtml
@@ -38,7 +38,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-actions no-color">
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        @Html.ActionLink("Back to List", "Index")
+        <input type="submit" value="刪除" class="btn btn-danger" /> 
+        @Html.ActionLink("返回會員管理頁面", "Index",null,new { @class="btn btn-success"})
     </div>
 }
