--- a/Gemma/Views/AspNetUsers/Index.cshtml
+++ b/Gemma/Views/AspNetUsers/Index.cshtml
@@ -1,6 +1,4 @@
 ﻿@model IPagedList<Gemma.ViewModel.MemberViewModel>
-@using PagedList;
-@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "Index";
@@ -15,18 +13,19 @@
 {
 <div class="form-inline">
     <div class="form-group">
-        會員搜尋:@Html.TextBox("id")
+        <label class="btn btn-info ml-3">會員搜尋</label>
+        @Html.TextBox("id", null, new { @class = "form-control ml-3" })
     </div>
     <div class="form-group" style="display:none">
         @Html.TextBox("search", "true")
     </div>
     <div class="form-group">
-        <input type="submit" value="查詢" class="btn btn-default" />
+        <input type="submit" value="查詢" class="btn btn-success ml-3" />
     </div>
 </div>
 
 }
-
+<br />
 <table class="table">
     <tr>
         <th>
@@ -60,9 +59,9 @@
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("編輯", "Edit", new { id = item.Id }, new { @class = "btn btn-success" }) 
+                @Html.ActionLink("詳細資料", "Details", new { id = item.Id }, new { @class = "btn btn-info" }) 
+                @Html.ActionLink("刪除", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
             </td>
         </tr>
     }
