--- a/Gemma/Views/BackStock/Delete.cshtml
+++ b/Gemma/Views/BackStock/Delete.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewBag.Title = "Delete";
 }
-
+<h2>刪除庫存資料</h2>
+<hr />
 <div>
     <dl class="dl-horizontal">
         <dt>
@@ -44,8 +45,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="刪除" class="btn btn-default" /> |
-            @Html.ActionLink("返回庫存管理頁面", "Index")
+            <input type="submit" value="刪除" class="btn btn-danger" /> 
+            @Html.ActionLink("返回庫存管理頁面", "Index", null, new { @class = "btn btn-success" })
         </div>
     }
 </div>
