--- a/Gemma/Views/BackStock/Edit.cshtml
+++ b/Gemma/Views/BackStock/Edit.cshtml
@@ -7,7 +7,8 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    <h2>修改庫存資料</h2>
+    <hr>
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -45,12 +46,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="儲存" class="btn btn-default" />
+                <input type="submit" value="儲存" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("返回庫存管理頁面", "Index")
+    @Html.ActionLink("返回庫存管理頁面", "Index", null, new { @class = "btn btn-success" })
 </div>
