--- a/Gemma/Views/Collection/CollectionPhotos.cshtml
+++ b/Gemma/Views/Collection/CollectionPhotos.cshtml
@@ -4,9 +4,8 @@
 @{
     ViewBag.Title = "CollectionPhotos";
 }
-
 <main role="main">
-    <div class="album py-5 bg-light">
+    <div class="album py-5">
         <section id="collection" class="section-bg">
             <div class="container">
 
@@ -35,7 +34,6 @@
 
 
 @section endJS{
-
     <script src="~/Assets/js/CollectionJS.js"></script>
     <script src="~/Assets/js/lightbox.js"></script>
 }
