--- a/Gemma/Views/Home/DaniellaGemma.cshtml
+++ b/Gemma/Views/Home/DaniellaGemma.cshtml
@@ -5,20 +5,16 @@
 
 
 @section topCSS{
-    <link href="~/Assets/CSS/FixedMenu.css" rel="stylesheet" />
     <link href="~/Assets/css/HomePage.css" rel="stylesheet" />
 }
 
 
-
-@Html.Partial("IndexPartial")
-
 @* Carousel Section *@
-<div class="container-fluid" id="Carouseldiv">
+<div class="container" id="Carouseldiv">
     <img src="~/Assets/images/HomePage/Img01.jpg" />
 </div>
 @* Items Section *@
-<div class="OnlineStoreItems container" >
+<div class="OnlineStoreItems container">
     <div class="Item-Header">
         <h1>
             <a href="#">ITEM</a>
@@ -172,16 +168,10 @@
 
 </div>
 
-
-
-@Html.Partial("_Footer")
-
-
 @section endJS{
     <script src="~/Assets/js/HomePageCarousel.js"></script>
     <script src="~/Assets/js/HomePageForItemsAndJournal.js"></script>
     <script src="~/Assets/js/HomePageForCollection.js"></script>
-    <script src="~/Assets/js/FixedMenuForIG.js"></script>
 }
     
 
