--- a/Gemma/Views/Order/Details.cshtml
+++ b/Gemma/Views/Order/Details.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
+<h2>訂單明細</h2>
+<hr>
 <div>
-    <h4>OrderDetailViewModel</h4>
-    <hr />
     <dl class="dl-horizontal">
         <div>
             <dt>
@@ -30,12 +28,13 @@
                 @Html.DisplayFor(model => model.CustomerName)
             </dd>
         </div>
-        <br>
+        <hr>
         @for (int i = 0; i < Model.ProductNames.Count; i++)
         {
             ViewData["Count"] = i + 1;
             @Html.Partial("_OrderDetailPartial", Model.ProductNames[i])
         }
+        <hr>
         <div>
             <dt>
                 @Html.DisplayNameFor(model => model.TotalPrice)
@@ -59,5 +58,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("返回訂單管理", "Index", null, new { @class = "btn btn-success" })
 </p>
