--- a/Gemma/Views/Products/Create.cshtml
+++ b/Gemma/Views/Products/Create.cshtml
@@ -4,10 +4,11 @@
     ViewBag.Title = "Create";
 }
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+    <h2>新增產品</h2>
+    <hr>
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -37,7 +38,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CategoryName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.CategoryID, (SelectList)ViewBag.CategoryID , new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.CategoryID, (SelectList)ViewBag.CategoryID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -53,12 +54,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="新增" class="btn btn-default" />
+                <input type="submit" value="新增" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("返回產品管理頁面", "Index")
+    @Html.ActionLink("返回產品管理頁面", "Index", null, new { @class = "btn btn-success" })
 </div>
