--- a/Gemma/Views/Products/Edit.cshtml
+++ b/Gemma/Views/Products/Edit.cshtml
@@ -7,7 +7,8 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+    <h2>修改產品資料</h2>
+    <hr>
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ProductID)
@@ -39,7 +40,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CategoryName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.CategoryID, (SelectList)ViewBag.CategoryID , new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.CategoryID, (SelectList)ViewBag.CategoryID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -55,12 +56,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="儲存" class="btn btn-default" />
+                <input type="submit" value="儲存" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("返回產品管理頁面", "Index")
+    @Html.ActionLink("返回產品管理頁面", "Index", null, new { @class = "btn btn-success" })
 </div>
