--- a/Gemma/Views/Products/Index.cshtml
+++ b/Gemma/Views/Products/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <p>
-    @Html.ActionLink("新增", "Create")
+    @Html.ActionLink("新增", "Create", null, new { @class = "btn btn-primary ml-3" })
 </p>
 @using (Html.BeginForm())
 {
@@ -13,11 +13,13 @@
 
     <div class="form-inline">
         <div class="form-group">
-            產品:@Html.TextBox("productName")
+            <label class = "btn btn-info ml-3">產品</label>
+            @Html.TextBox("productName",null, new { @class = "form-control ml-3" })
         </div>
 
         <div class="form-group">
-            類別:@Html.TextBox("categoryName")
+            <label class = "btn btn-info ml-3">類別</label>
+            @Html.TextBox("categoryName",null, new { @class = "form-control ml-3" })
         </div>
 
         <div class="form-group" style="display:none">
@@ -26,11 +28,12 @@
 
         <div class="form-group">
             <div>
-                <input type="submit" value="查詢" class="btn btn-default" />
+                <input type="submit" value="查詢" class="btn btn-success ml-3" />
             </div>
         </div>
     </div>
 }
+<br>
 <table class="table">
     <tr>
         <th>
@@ -63,9 +66,9 @@
                 @Html.DisplayFor(modelItem => item.CategoryName)
             </td>
             <td>
-                @Html.ActionLink("編輯", "Edit", new { id = item.ProductID }) |
-                @Html.ActionLink("詳細資料", "Details", new { id = item.ProductID }) |
-                @Html.ActionLink("刪除", "Delete", new { id = item.ProductID })
+                @Html.ActionLink("編輯", "Edit", new { id = item.ProductID }, new { @class = "btn btn-success" })
+                @Html.ActionLink("詳細資料", "Details", new { id = item.ProductID }, new { @class = "btn btn-info" })
+                @Html.ActionLink("刪除", "Delete", new { id = item.ProductID }, new { @class = "btn btn-danger" })
             </td>
         </tr>
     }
