--- a/Gemma/Views/Shared/_Header.cshtml
+++ b/Gemma/Views/Shared/_Header.cshtml
@@ -63,10 +63,12 @@
 </div>
 
 @section topCSS{
-    .fixed {
-    height: 70px !important;
-    animation-delay: 100ms;
-    }
+    <style>
+        .fixed {
+            height: 70px !important;
+            animation-delay: 100ms;
+        }
+    </style>
 }
 
 @section endJS{
