--- a/Gemma/Views/Home/DaniellaGemma.cshtml
+++ b/Gemma/Views/Home/DaniellaGemma.cshtml
@@ -6,12 +6,26 @@
 
 @section topCSS{
     <link href="~/Assets/css/HomePage.css" rel="stylesheet" />
+    <link href="~/Assets/css/flexslider.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+    <style>
+        .flexslider{
+            border:0;
+        }
+    </style>
 }
 
 
 @* Carousel Section *@
-<div class="container" id="Carouseldiv">
-    <img src="~/Assets/images/HomePage/Img01.jpg" />
+<div class="container">
+    <div class="flexslider">
+        <ul class="slides">
+            <li><img src="~/Assets/images/HomePage/Img01.jpg" /></li>
+            <li><img src="~/Assets/images/HomePage/Img02.jpg" /></li>
+            <li><img src="~/Assets/images/HomePage/Img03.jpg" /></li>
+            <li><img src="~/Assets/images/HomePage/Img04.jpg" /></li>
+        </ul>
+    </div>
 </div>
 @* Items Section *@
 <div class="OnlineStoreItems container">
@@ -169,9 +183,16 @@
 </div>
 
 @section endJS{
-    <script src="~/Assets/js/HomePageCarousel.js"></script>
     <script src="~/Assets/js/HomePageForItemsAndJournal.js"></script>
     <script src="~/Assets/js/HomePageForCollection.js"></script>
+    <script src="~/Assets/js/jquery.flexslider-min.js"></script>
+    <script>
+        $(() => {
+            $('.flexslider').flexslider({
+                slideshowSpeed: 3500
+            })
+        })
+    </script>
 }
-    
+
 
