--- a/Gemma/Views/Journall/Index.cshtml
+++ b/Gemma/Views/Journall/Index.cshtml
@@ -50,15 +50,15 @@
     </style>
 }
 @section endJS{
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
+@*<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+</script>*@
 <script>
     $(document).ready(function () {
-        $('img').mouseover(function () {
-            $('img').not(this).addClass("img_white")
+        $('.img1 img').mouseover(function () {
+            $('.img1 img').not(this).addClass("img_white")
             //$(".word").addClass("wordshow")
-        }), $('img').mouseout(function () {
-            $('img').not(this).removeClass("img_white")
+        }), $('.img1 img').mouseout(function () {
+            $('.img1 img').not(this).removeClass("img_white")
 
         });
         //$(".word").removeClass("wordshow")
