--- a/Gemma/Views/Shared/_Header.cshtml
+++ b/Gemma/Views/Shared/_Header.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "_Header";
 }
@@ -25,6 +25,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">SHOP</a>
                 </li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li>
+                        <a class="nav-link" href="@Url.Action("MemberInfo", "MemberCenter", new { id = User.Identity.GetUserId() })">@User.Identity.Name</a>
+                    </li>
+                }
             </ul>
 
             @Html.Partial("_NewLoginPartial")
